@@ -1,3 +1,10 @@
+2014-12-11  Timothy Horton  <timothy_horton@apple.com>
+
+        Fix the build.
+
+        * WebView/WebImmediateActionController.h:
+        * WebView/WebImmediateActionController.mm:
+
 2014-12-11  Anders Carlsson  <andersca@apple.com>
 
         Call StorageThread::releaseFastMallocFreeMemoryInAllThreads from WebKit
